Unified: Improve focus cycle of UnifiedSystemTray

This CL makes following improvements:
* Now first time Shift-Tab will focus on "Clear All" button.
* Now "Change" button for lock screen notification is included in
  focus cycle.

TEST=manual
BUG=880041

Change-Id: I3185936e505755a9d0de19c4425c285b3337e9ad
Reviewed-on: https://chromium-review.googlesource.com/c/1288110
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Commit-Queue: Tetsui Ohkubo <tetsui@chromium.org>
Cr-Commit-Position: refs/heads/master@{#601014}
Former-commit-id: 01e6b4ad120d26f2f7090eba9e49e6156cc316d2